adding position server app
